--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="weather">
         <div class="search-details">
             <input  type="text" placeholder="Enter city name" value=""></input>
-            <button class="search-btn"><img src="images/download.png" alt=""></button>
+            <button class="search-btn"><img src="./download.png" alt=""></button>
         </div>
         <h1 class="invalid">Invalid City Name..</h1>
         <div class="weather-details">
-                <img class="weather-icon" src="images/sun.png">
+                <img class="weather-icon" src="./sun.png">
                 <h1 class="temperature">33*c</h1>
                 <h2 class="city">Newyork</h2>
            <div class="details">
                  <div class="col">
-                    <img  src="images/wind (1).png">
+                    <img  src="./wind (1).png">
                  <div class="wind-det">
                     <h1 class="wind">32km/h</h1>
                     <h2>Wind Speed</h2>
