--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                  </div>
                 </div>
                 <div class="col">
-                    <img src="images/humidity.png">
+                    <img src="./humidity.png">
                 <div class="humid-det">
                     <h1 class="humidity">33*c</h1>
                     <h2>Humidity</h2>
