--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="weather">
+        <h1>Weather Forecast</h1>
         <div class="search-details">
             <input  type="text" placeholder="Enter city name" value=""></input>
             <button class="search-btn"><img src="./download.png" alt=""></button>
